Fix configuration description going out of bounds [Popup]

--- a/popup/styles.css
+++ b/popup/styles.css
@@ -290,7 +290,7 @@ p {
     margin-left: 16px;
     margin-bottom: 8px;
     padding: 0;
-    width: 220px;
+    width: 190px;
 }
 
 h2 {
